refactor: migrate from API key to OAuth 2.0 client credentials authentication

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# IBM Video Streaming API Configuration
-IBM_API_KEY=your_api_key_here
-IBM_API_SECRET=your_api_secret_here
+# IBM Video Streaming OAuth 2.0 Configuration
+# Get credentials from: IBM Video Streaming Dashboard → API/Channel Settings
+IBM_CLIENT_ID=your_40_character_client_id_here
+IBM_CLIENT_SECRET=your_client_secret_here
 IBM_API_BASE_URL=https://api.video.ibm.com
 
 # Application Settings
