--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-# GUI Framework
+# Web Framework
+Flask>=3.0.0
+Flask-CORS>=4.0.0
+
+# GUI Framework (Legacy - for Qt version)
 PySide6>=6.6.0
 
 # HTTP Client
